# ML4B_project

./: .gitignore  CLAUDE.md  README.md  Requirements.txt  SETUP.md  app.py  project.md  pyproject.toml
app/: app.py
data/: samsung_sleep.csv
data/example_nights/: README.md  manual-labels.csv
data/raw/: README.md
models/: sleep_model_w120_s60.joblib  sleep_model_w30_s15.joblib  sleep_model_w55_s15.joblib
notebooks/: explore_preprocess.ipynb  load_merge.ipynb  notebook.ipynb
presentation/: SleepClassification_ML4B_7.pptx  V1_SleepClassification_ML4B.pptx  V2_SleepClassification_ML4B.pptx
src/: main.py
src/ml4b/: __init__.py  config.py  features.py  io.py  labels.py  model.py  phases.py  pipeline.py  preprocess.py  samsung.py
